[package]
name          = "Mod"
author        = "Robert Jacobson <rljacobson@gmail.com"
version       = "0.1.0"
edition       = "2021"
repository    = "https://www.github.com/rljacobson/Mod"
license       = "This software library is distributed under the terms of the GNU Lesser General Public License. https://www.gnu.org/licenses/lgpl-3.0.en.html"
license-file  = "LICENSE.txt"


publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intrusive-collections = "0.9.4"  # For Red-Black Trees
bit-set   = "0.5.3" # Implements NatSet
dyn-clone = "1.0.9" # Lets `Box<dyn myTrait>` derive `Clone`
reffers   = "0.7.0" # `Rc<RefCell<T>>` alternative for `DagNode`, etc.

diophantine = {path = "../diophantine"} # System of linear Diophantine equations solver
