[package]
name = "Mod"
description = "A RIIR for Maude's state-of-the-art pattern matching algorithms"
authors = ["Robert Jacobson <rljacobson@gmail.com"]
version = "0.1.0"
edition = "2021"
repository = "https://www.github.com/rljacobson/Mod"
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["pattern-matching", "matching-algorithms", "unification", "term-rewriting", "equational-logic"]
categories = ["algorithms", "compilers", "mathematics", "science", "parsing"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3" # Implements NatSet
string_cache = "0.8.7" # String interning
shared_vector = "0.4.4" # Rc<Vec<T>> type

pratt          = {path = "../pratt"}
unicode-blocks = "0.1.6" # Greek Unicode characters
simple-error   = "0.3.0" # Minimal error handling

#once_cell = "1.17.1" # Initialize static members
#lazy_static = "1.4.0" # Initialize static members

## AUC Theory
#intrusive-collections = "0.9.4"  # For Red-Black Trees
#diophantine = {path = "../diophantine"} # System of linear Diophantine equations solver
